--- a/frontend/src/Layout/components/Header/header.module.scss
+++ b/frontend/src/Layout/components/Header/header.module.scss
@@ -212,6 +212,7 @@
     align-items: center;
     justify-content: center;
     padding-bottom: 5px;
+    position: relative;
     margin: 0 10px;
     height: 100%;
     margin: auto 0;
@@ -220,4 +221,71 @@
         font-size: 20px;
     }
 }
-
+.wrap-cart {
+    position: absolute;
+    top: 40px;
+    right: -16px;
+    width: 400px;
+    background-color: #fff;
+    border-radius: 2px;
+    box-shadow: 0 1px 3.125rem 0 rgba(0, 0, 0, .2);
+    overflow: hidden;
+}
+.cart-title {
+    height: 40px;
+    color: rgba(0, 0, 0, .26);
+    padding-left: 10px;
+    font-size: 14px;
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    user-select: none;
+}
+.item-cart {
+    padding: 10px;
+    display: flex;
+    cursor: pointer;
+    img {
+        width: 40px;
+        height: 40px;
+        border: 1px solid rgba(0, 0, 0, .09);
+        flex-shrink: 0;
+    }
+}
+.cart-info {
+    margin-left: 10px;
+    display: flex;
+    .cart-name {
+        display: block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        font-weight: 500;
+        white-space: nowrap;
+        max-width: 210px;
+        font-size: 14px;
+    }
+    .cart-price {
+        margin-left: 40px;
+        color : #ee4d2d;
+        font-size: 14px;
+    }
+}
+.btn-cart {
+    align-items: center;
+    background-color: #fdfdfd;
+    display: flex;
+    font-size: 14px;
+    height: 60px;
+    line-height: 40px;
+    padding: 10px;
+    text-align: center;
+    text-transform: capitalize;
+    button {
+        display: flex;
+        align-items: center;
+        padding: 0 15px; 
+        height: 34px;
+        background-color: #ee4d2d;
+        color : #fff;
+    }
+}
