--- a/frontend/src/components/globalstyle/GlobalStyle.scss
+++ b/frontend/src/components/globalstyle/GlobalStyle.scss
@@ -80,3 +80,10 @@ a[href] {
     min-width: 70px;
     padding: 0 20px;
 }
+.border-top__cart {
+    background-image: repeating-linear-gradient(45deg, #6fa6d6, #6fa6d6 33px, transparent 0, transparent 41px, #f18d9b 0, #f18d9b 74px, transparent 0, transparent 82px);
+    background-position-x: -30px;
+    background-size: 116px 3px;
+    height: 3px;
+    width: 100%;
+}
